# KeyVault

./: .gitignore  .prettierignore  .prettierrc  README.md  SIGNING_SETUP_GUIDE.md  components.json  eslint.config.js  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  main.yml
docs/: codesigning.md  tech-stack.md
scripts/: generate-icons.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: crypto.rs  db.rs  lib.rs  main.rs
src-tauri/src/commands/: auth.rs  backup.rs  groups.rs  mod.rs  passwords.rs  settings.rs
src/mainview/: App.tsx  index.html
src/mainview/components/: AppSidebar.tsx  ChangeMasterPasswordDialog.tsx  CopyButton.tsx  GroupForm.tsx  GroupPasswordDialog.tsx  HotkeySettings.tsx  ImportPasswordDialog.tsx  PasswordCard.tsx  PasswordDetail.tsx  PasswordForm.tsx  SearchBar.tsx  ThemeToggle.tsx
src/mainview/components/ui/: dropdown-menu.tsx  select.tsx  toast.tsx
src/mainview/hooks/: useClipboard.ts  useResponsive.ts  useSearch.ts  useTheme.ts
src/mainview/lib/: api.ts  utils.ts
src/mainview/pages/: SetupPage.tsx  UnlockPage.tsx  VaultPage.tsx
src/mainview/stores/: authStore.ts  groupStore.ts  passwordStore.ts  settingsStore.ts
src/mainview/styles/: global.css
