[package]
name = "KeyVault"
version = "1.0.0"
description = "kv - KeyVault"
authors = []
edition = "2021"

[lib]
name = "kv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
aes-gcm = "0.10"
ring = "0.17"
base64 = "0.22"
rand = "0.8"
once_cell = "1"
dirs = "5"
chrono = "0.4"
thiserror = "1"

# 兼容 Rust 1.87.0 的依赖版本
darling = "=0.20.9"
plist = "=1.8.0"
serde_with = "=3.9.0"
time = "=0.3.36"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
